feat(web): apply blue brand color, add logo, drop landing marketing sections
Three themed changes grouped into one commit because they were all
applied locally between the last commit and this one and the user asked
to land them as a single milestone.

Brand colour

- The application is re-themed around #0962B6 (HSL 206 90 38) instead
  of the previous indigo-violet brand. web/src/index.css rewrites
  --primary, --ring, --glow-primary, --accent, the --brand-start /
  --brand-end / --brand-gradient token triplet and the .dark
  equivalents to the new blue family. --background / --foreground /
  --border / --muted-foreground are nudged cooler so the page no longer
  reads as warm grey. The rgba(106, 109, 255, …) shadows under
  .upload-zone:hover and .feature-icon are replaced with rgba(9, 98,
  182, …). The .dark .text-gradient-hero palette is also rotated
  onto a blue base.
- web/src/shared/components/quick-start.tsx hard-coded code-highlight
  hex values are recoloured (the --code-keyword teal moves to a
  sky blue; --code-comment / --code-url move to a blue-grey).
- web/src/shared/components/landing-quick-start.tsx swaps the agent
  tab accent from a green (#16A34A) to the new blue so it matches
  the rest of the active-tab treatment.
- web/src/app/layout.tsx footer background switches from a neutral
  slate (#F1F5F9) to a tinted blue (hsl(206 60 96)).

LAN-friendly preview server

- web/vite.config.ts adds a preview.proxy block that mirrors the dev
  server's proxy. The previous setup only configured server.proxy, so
  'vite preview' (used in the LAN / Hybrid deployment because the dev
  server is too slow) had no API proxy and every fetch('/api/...')
  fell through to the static 404 handler. With this change the
  preview server proxies /api and /oauth2 to http://localhost:8080
  the same way the dev server does, while still binding on 0.0.0.0:3000
  so anyone on the LAN can reach it.

Logo

- logo.png and web/public/logo.png are added (4.5 KB PNG of the
  ZDSk